@@ -21,6 +21,7 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.TestTemplate;
 import org.junit.jupiter.api.condition.DisabledOnOs;
@@ -113,7 +114,7 @@ class EmbeddedServletContainerWarPackagingIntegrationTests {
 			return Collections.emptyList();
 		}
 		try (BufferedReader reader = new BufferedReader(new StringReader(input))) {
-			return reader.lines().toList();
+			return reader.lines().collect(Collectors.toList());
 		}
 		catch (IOException ex) {
 			throw new RuntimeException("Failed to read lines from input '" + input + "'");
